// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-go 1`] = `
"# Onboarding tour: spine-go

## TL;DR
This repository is a app built primarily in go. The verified spine currently runs through \`main.go\`, \`routes/routes.go\`, \`service/service.go\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  main
  routes_routes
  service_service
  config_config
  store_store
  main --> config_config
  main --> routes_routes
  routes_routes --> service_service
  service_service --> store_store
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNptj7sKwzAMRX_FaE5-wEOnjp3atRCELSeG2C6K3FJC_r1x0gdtuujC1UEHjWCSJdDg-nQzHbKow_EclQroY0lOWWho1ijFQHz1hppnlsqk6HzbrLEwkngmynzdUnW924LvzUbzVSzIH_FPtWIfN1QQiGeHBT2CdBTKp5Yc5l5gqgCzpNM9GtDCmSrIF4tCe48tYwDtsB9oegAMKGkj)

Legend:
- \`main\` = \`main.go\`
- \`routes_routes\` = \`routes/routes.go\`
- \`service_service\` = \`service/service.go\`
- \`config_config\` = \`config/config.go\`
- \`store_store\` = \`store/store.go\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Follow the runtime path from \`main.go\` into \`config/config.go\` first, then widen out into the surrounding subsystems once that handoff makes sense.

## Reading order
- \`main.go\` - Detected app entry point; it shows where execution begins for this repo shape.
- \`routes/routes.go\` - Verified spine bridge from \`main.go\` into \`service/service.go\`, so it explains a central runtime handoff.
- \`service/service.go\` - Verified spine bridge from \`routes/routes.go\` into \`store/store.go\`, so it explains a central runtime handoff.
- \`config/config.go\` - Reached directly from \`main.go\`; this is one of the next verified implementation hops.
- \`store/store.go\` - Reached directly from \`service/service.go\`; this is one of the next verified implementation hops.
- \`go.mod\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- main.go - Conventional Go entry.

## Subsystems
- No subsystem clusters were strong enough to report yet.

## Gotchas
- Defaulted to app after manifest and file scan.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.
- Subsystem clustering is still sparse, which usually means the repo is small or highly centralized.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-go-library 1`] = `
"# Onboarding tour: spine-go-library

## TL;DR
This repository is a library built primarily in go. The verified spine currently runs through \`lib.go\`, \`internal/parser/parser.go\`, \`internal/transport/transport.go\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  lib
  internal_parser_parser
  internal_transport_transport
  lib --> internal_parser_parser
  lib --> internal_transport_transport
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNp9jr0KwkAQhF_lmDp5gSusLK20FWTN7ZmD-2Ozh4SQd5dAQESx-gZm-JgFQ3EMCx_LcxhJ1JzO12xMDPcNIStLpnirJBPLjo9GhfJUi-g77QLT94c_hq_FDxM6JJZEwcEu0JHTdtaxpxYVawdqWi5zHmBVGndo1ZHyMdBDKMF6ihOvL0DlVKE)

Legend:
- \`lib\` = \`lib.go\`
- \`internal_parser_parser\` = \`internal/parser/parser.go\`
- \`internal_transport_transport\` = \`internal/transport/transport.go\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Read from the exported surface inward: start with \`lib.go\`, then follow its first verified handoff into \`internal/parser/parser.go\`.

## Reading order
- \`lib.go\` - Detected library entry point; it shows where execution begins for this repo shape.
- \`internal/parser/parser.go\` - Reached directly from \`lib.go\`; this is one of the next verified implementation hops.
- \`internal/transport/transport.go\` - Reached directly from \`lib.go\`; this is one of the next verified implementation hops.
- \`go.mod\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- lib.go - Go package root (no main.go).

## Subsystems
- No subsystem clusters were strong enough to report yet.

## Gotchas
- Detected package exports or main entry.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.
- Subsystem clustering is still sparse, which usually means the repo is small or highly centralized.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-go-multi 1`] = `
"# Onboarding tour: spine-go-multi

## TL;DR
This repository is a app built primarily in go. The verified spine currently runs through \`cmd/api/main.go\`, \`cmd/worker/main.go\`, \`internal/store/store.go\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  cmd_api_main
  cmd_worker_main
  internal_store_store
  internal_jobs_jobs
  internal_server_server
  cmd_api_main --> internal_server_server
  cmd_worker_main --> internal_jobs_jobs
  internal_jobs_jobs --> internal_store_store
  internal_server_server --> internal_store_store
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNqFULsOwjAM_JXIc_sDGZgYmWBFqkzi0kAeyE2oUNV_p1BRkYqK5Syfzncn96CCJpBQ29CpBjmK3f7ohVBOV3gzlUPjP3sX-Eo8U8ZHYo-2amNgmjDjL-HUviFXE99Hl2kso0RZbv5Iv1rk6t9xM7uwXumcRa6eQAGOeKygQfYQG3KvH2qqMdkIQwGYYjg8vAIZOVEB6aYx0tbgmdGBrNG2NDwBdkaOIw)

Legend:
- \`cmd_api_main\` = \`cmd/api/main.go\`
- \`cmd_worker_main\` = \`cmd/worker/main.go\`
- \`internal_store_store\` = \`internal/store/store.go\`
- \`internal_jobs_jobs\` = \`internal/jobs/jobs.go\`
- \`internal_server_server\` = \`internal/server/server.go\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Follow the runtime path from \`cmd/api/main.go\` into \`internal/server/server.go\` first, then widen out into the surrounding subsystems once that handoff makes sense.

## Reading order
- \`cmd/api/main.go\` - Detected cli entry point; it shows where execution begins for this repo shape.
- \`cmd/worker/main.go\` - Detected cli entry point; it shows where execution begins for this repo shape.
- \`internal/store/store.go\` - Reached directly from \`internal/jobs/jobs.go\`; this is one of the next verified implementation hops.
- \`internal/jobs/jobs.go\` - Verified spine bridge from \`cmd/worker/main.go\` into \`internal/store/store.go\`, so it explains a central runtime handoff.
- \`internal/server/server.go\` - Verified spine bridge from \`cmd/api/main.go\` into \`internal/store/store.go\`, so it explains a central runtime handoff.
- \`go.mod\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- cmd/api/main.go - Go cmd/*/main.go convention.
- cmd/worker/main.go - Go cmd/*/main.go convention.

## Subsystems
- No subsystem clusters were strong enough to report yet.

## Gotchas
- Defaulted to app after manifest and file scan.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.
- Subsystem clustering is still sparse, which usually means the repo is small or highly centralized.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-php 1`] = `
"# Onboarding tour: spine-php

## TL;DR
This repository is a app built primarily in php. The verified spine currently runs through \`public/index.php\`, \`src/Http/Router.php\`, \`src/Controllers/HomeController.php\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  public_index
  src_Http_Router
  src_Controllers_HomeController
  src_Services_UserService
  src_Models_User
  public_index --> src_Http_Router
  src_Controllers_HomeController --> src_Services_UserService
  src_Http_Router --> src_Controllers_HomeController
  src_Services_UserService --> src_Models_User
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNqdkL0OwjAMhF-l8ty-QAcWGDrA0ooNKQqJSyMlTeU4_Kjqu0MFLRUDEoznu_MnuwflNUIOtfUX1UjiZFse2iTp4tEaJUyr8TrqQEoUzJ0ofWSkabT2LZO3FimIwjt86ylRIZ2NwiD2AeklJm_3YNun88lMsmz1O3RufaMuNs75_-6Y64tDIAWH5KTRkPfADbrxvRprGS3DkIKM7KtbqyBniphC7LRk3Bh5Iukgr6UNONwBXGaW_w)

Legend:
- \`public_index\` = \`public/index.php\`
- \`src_Http_Router\` = \`src/Http/Router.php\`
- \`src_Controllers_HomeController\` = \`src/Controllers/HomeController.php\`
- \`src_Services_UserService\` = \`src/Services/UserService.php\`
- \`src_Models_User\` = \`src/Models/User.php\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Follow the runtime path from \`public/index.php\` into \`src/Http/Router.php\` first, then widen out into the surrounding subsystems once that handoff makes sense.

## Reading order
- \`public/index.php\` - Detected app entry point; it shows where execution begins for this repo shape.
- \`src/Http/Router.php\` - Verified spine bridge from \`public/index.php\` into \`src/Controllers/HomeController.php\`, so it explains a central runtime handoff.
- \`src/Controllers/HomeController.php\` - Verified spine bridge from \`src/Http/Router.php\` into \`src/Services/UserService.php\`, so it explains a central runtime handoff.
- \`src/Services/UserService.php\` - Verified spine bridge from \`src/Controllers/HomeController.php\` into \`src/Models/User.php\`, so it explains a central runtime handoff.
- \`src/Models/User.php\` - Reached directly from \`src/Services/UserService.php\`; this is one of the next verified implementation hops.

## Entry points found
- public/index.php - PHP front controller.

## Subsystems
- No subsystem clusters were strong enough to report yet.

## Gotchas
- Defaulted to app after manifest and file scan.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.
- Subsystem clustering is still sparse, which usually means the repo is small or highly centralized.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-python 1`] = `
"# Onboarding tour: spine-python

## TL;DR
This repository is a app built primarily in python. The verified spine currently runs through \`manage.py\`, \`app/main.py\`, \`app/routes.py\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  manage
  app_main
  app_routes
  app_services_user_service
  app_config
  app_main --> app_config
  app_main --> app_routes
  app_main --> app_services_user_service
  app_routes --> app_services_user_service
  manage --> app_main
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNqFkLEKwzAMRH_FaE5-wEOnjp3atRCELTuG2A623BJC_r0JwaVZmu0dd9IhzaCiJpBghvhWPSYWt_szCOExoKWNcBw7jy5UTrEw5aoypZdTlLuyUlXVVDEYZ3-XiLa9nFnHgoP1t22fO8_up31zWwE04CmtpEHOwD357SeaDJaBYWkAC8fHFBRIToUaKKNGpqtDm9CDNDhkWj5QpHfV)

Legend:
- \`manage\` = \`manage.py\`
- \`app_main\` = \`app/main.py\`
- \`app_routes\` = \`app/routes.py\`
- \`app_services_user_service\` = \`app/services/user_service.py\`
- \`app_config\` = \`app/config.py\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Follow the runtime path from \`manage.py\` into \`app/config.py\` first, then widen out into the core subsystem once that handoff makes sense.

## Reading order
- \`manage.py\` - Detected main entry point; it shows where execution begins for this repo shape.
- \`app/main.py\` - Verified spine bridge from \`manage.py\` into \`app/config.py\`, so it explains a central runtime handoff.
- \`app/routes.py\` - Verified spine bridge from \`app/main.py\` into \`app/services/user_service.py\`, so it explains a central runtime handoff.
- \`app/services/user_service.py\` - Reached directly from \`app/main.py\`; this is one of the next verified implementation hops.
- \`app/config.py\` - Reached directly from \`app/main.py\`; this is one of the next verified implementation hops.
- \`pyproject.toml\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- manage.py - Conventional Python framework entry.

## Subsystems
### Core
What it does: Core orchestration and shared runtime behavior.
Where it lives: \`app/**\`
Entry point: \`app/__init__.py\`
Skip unless: Skip unless you need the central control flow or shared abstractions.

## Gotchas
- Defaulted to app after manifest and file scan.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-rust 1`] = `
"# Onboarding tour: spine-rust

## TL;DR
This repository is a library built primarily in rust. The verified spine currently runs through \`src/lib.rs\`, \`src/services/mod.rs\`, \`src/config.rs\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  src_lib
  src_services_mod
  src_config
  src_routes_mod
  src_services_user_service
  src_lib --> src_config
  src_lib --> src_routes_mod
  src_lib --> src_services_mod
  src_services_mod --> src_services_user_service
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNptULsOwjAM_JXIc_sDGZgYmWBFqkzitJGSBjkOCFX9d2AICmq3e9in0y1gkiXQ4EJ6mglZ1Ol8nZXKbIbgbxVm4oc3lIeYbNVMmp0fK-NU5N___ZQPqqzJVn1_2AlqnW1o6-6VarXtYdsEOojEEb0FvYBMFL87WHJYgsDaARZJl9dsQAsX6qDcLQodPY6MEbTDkGl9A645dPI)

Legend:
- \`src_lib\` = \`src/lib.rs\`
- \`src_services_mod\` = \`src/services/mod.rs\`
- \`src_config\` = \`src/config.rs\`
- \`src_routes_mod\` = \`src/routes/mod.rs\`
- \`src_services_user_service\` = \`src/services/user_service.rs\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Read from the exported surface inward: start with \`src/lib.rs\`, then follow its first verified handoff into \`src/config.rs\`.

## Reading order
- \`src/lib.rs\` - Detected library entry point; it shows where execution begins for this repo shape.
- \`src/services/mod.rs\` - Verified spine bridge from \`src/lib.rs\` into \`src/services/user_service.rs\`, so it explains a central runtime handoff.
- \`src/config.rs\` - Reached directly from \`src/lib.rs\`; this is one of the next verified implementation hops.
- \`src/routes/mod.rs\` - Reached directly from \`src/lib.rs\`; this is one of the next verified implementation hops.
- \`src/services/user_service.rs\` - Reached directly from \`src/services/mod.rs\`; this is one of the next verified implementation hops.
- \`Cargo.toml\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- src/lib.rs - Conventional Rust library entry.

## Subsystems
- No subsystem clusters were strong enough to report yet.

## Gotchas
- Detected package exports or main entry.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.
- Subsystem clustering is still sparse, which usually means the repo is small or highly centralized.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-rust-workspace 1`] = `
"# Onboarding tour: spine-rust-workspace

## TL;DR
This repository is a monorepo built primarily in rust. The verified spine currently runs through \`cli/src/main.rs\`, \`core/src/lib.rs\`, \`cli/src/commands.rs\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  cli_src_main
  core_src_lib
  cli_src_commands
  core_src_parser
  core_src_types
  cli_src_main --> cli_src_commands
  core_src_lib --> core_src_parser
  core_src_lib --> core_src_types
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNp9j7sKwzAMRX_FaE5-wEOnjp3atRBUW2kMfgRZpoSQf0_qLk0LGXXv4R40g0mWQEPv08sMyKIu13tUynjXZTZdQBfrnZhq4N3juzcpBIw275gRORPvIplGyr_Dqm1Px0ub7QMdTP8x1QUNBOLNYkHPIAOF95uWeixeYGkAi6TbFA1o4UINlNGi0NnhkzGA7tFnWlY1Bmh2)

Legend:
- \`cli_src_main\` = \`cli/src/main.rs\`
- \`core_src_lib\` = \`core/src/lib.rs\`
- \`cli_src_commands\` = \`cli/src/commands.rs\`
- \`core_src_parser\` = \`core/src/parser.rs\`
- \`core_src_types\` = \`core/src/types.rs\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Orient package-first: start with \`cli/src/main.rs\`, then stay inside the workspace slice that owns the next verified handoff into \`cli/src/commands.rs\`.

## Reading order
- \`cli/src/main.rs\` - Detected main entry point; it shows where execution begins for this repo shape.
- \`core/src/lib.rs\` - Detected library entry point; it shows where execution begins for this repo shape.
- \`cli/src/commands.rs\` - Reached directly from \`cli/src/main.rs\`; this is one of the next verified implementation hops.
- \`core/src/parser.rs\` - Reached directly from \`core/src/lib.rs\`; this is one of the next verified implementation hops.
- \`core/src/types.rs\` - Reached directly from \`core/src/lib.rs\`; this is one of the next verified implementation hops.
- \`Cargo.toml\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- cli/src/main.rs - Rust workspace member: cli.
- core/src/lib.rs - Rust workspace member: core.

## Subsystems
### CLI
What it does: Command wiring and runtime entry behavior.
Where it lives: \`cli/**\`
Entry point: \`cli/Cargo.toml\`
Skip unless: Skip unless you are changing command UX or startup flow.

### Core
What it does: Core orchestration and shared runtime behavior.
Where it lives: \`core/**\`
Entry point: \`core/Cargo.toml\`
Skip unless: Skip unless you need the central control flow or shared abstractions.

## Gotchas
- Detected workspaces or multiple package roots.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-ts 1`] = `
"# Onboarding tour: spine-ts

## TL;DR
This repository is a library built primarily in typescript. The verified spine currently runs through \`src/cli.ts\`, \`src/index.ts\`, \`src/services/user-service.ts\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  src_cli
  src_index
  src_services_user_service
  src_core_router
  src_handlers_user_handler
  src_cli --> src_core_router
  src_core_router --> src_handlers_user_handler
  src_handlers_user_handler --> src_services_user_service
  src_index --> src_services_user_service
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNp9UDkOwzAM-4qhOfmAh04dO7VrgUCwlcaAj0KWeyDI33sgDjK02UiK1DWCSZZAQ-_T3QzIog7Hc1Qqs-mMdxW6aOlRSSa-OUO5K29U2RJKTB2nIsRVGjBaTzz7Z7Yaotp29y-7khbbZr-fxSW6ufr3yG0rNBCIAzoLegQZKHyeZ6nH4gWmBrBIOj2jAS1cqIFytSi0d3hhDKB79JmmFy7qixA)

Legend:
- \`src_cli\` = \`src/cli.ts\`
- \`src_index\` = \`src/index.ts\`
- \`src_services_user_service\` = \`src/services/user-service.ts\`
- \`src_core_router\` = \`src/core/router.ts\`
- \`src_handlers_user_handler\` = \`src/handlers/user-handler.ts\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Read from the exported surface inward: start with \`src/cli.ts\`, then follow its first verified handoff into \`src/core/router.ts\` before branching into the auth area.

## Reading order
- \`src/cli.ts\` - Detected cli entry point; it shows where execution begins for this repo shape.
- \`src/index.ts\` - Detected library entry point; it shows where execution begins for this repo shape.
- \`src/services/user-service.ts\` - Reached directly from \`src/handlers/user-handler.ts\`; this is one of the next verified implementation hops.
- \`src/core/router.ts\` - Verified spine bridge from \`src/cli.ts\` into \`src/handlers/user-handler.ts\`, so it explains a central runtime handoff.
- \`src/handlers/user-handler.ts\` - Verified spine bridge from \`src/core/router.ts\` into \`src/services/user-service.ts\`, so it explains a central runtime handoff.
- \`package.json\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- src/cli.ts - Declared as package.json bin.
- src/index.ts - Declared as package.json main.

## Subsystems
### Auth
What it does: Authentication and authorization flow.
Where it lives: \`src/auth/**\`
Entry point: \`src/auth/session.ts\`
Skip unless: Skip unless you are changing login, permissions, or identity handling.

### Config
What it does: Configuration loading, defaults, and environment handling.
Where it lives: \`src/config/**\`
Entry point: \`src/config/env.ts\`
Skip unless: Skip unless configuration, flags, or env wiring matters to your task.

### Docs
What it does: Documentation and non-runtime reference material.
Where it lives: \`docs/**\`
Entry point: \`docs/usage.md\`
Skip unless: Skip unless you are updating docs or looking for usage guidance.

### Utils
What it does: Shared helpers and low-level support functions.
Where it lives: \`src/utils/**\`
Entry point: \`src/utils/logger.ts\`
Skip unless: Skip unless you need a reused helper or utility abstraction.

## Gotchas
- Detected package exports or main entry.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;

exports[`ONBOARDING.md snapshot > renders a stable deterministic tour for spine-ts-paths 1`] = `
"# Onboarding tour: spine-ts-paths

## TL;DR
This repository is a library built primarily in typescript. The verified spine currently runs through \`src/index.ts\`, \`src/services/user-service.ts\`, \`src/utils/index.ts\`. The architecture diagram is derived from verified static-analysis edges only.

## Architecture map
\`\`\`mermaid
flowchart LR
  src_index
  src_services_user_service
  src_utils_index
  src_index --> src_services_user_service
  src_index --> src_utils_index
  src_services_user_service --> src_utils_index
\`\`\`

View / edit on [mermaid.live](https://mermaid.live/view#pako:eNqFj7sKwzAMRX_FaE5-wEOnjp3atRCELTcGP4ottSkh_94HeAgYuulw77mgFUy2BBpcyE8zY2F1Ol-TUrWYySdLS4NK5eEN1Uk-V6MWCvtQ9_0fqHE8_Lf31c5W1-4JMECkEtFb0CvwTPH7myWHEhi2AVA4X17JgOYiNIDcLTIdPd4KRtAOQ6XtDbgxZh8)

Legend:
- \`src_index\` = \`src/index.ts\`
- \`src_services_user_service\` = \`src/services/user-service.ts\`
- \`src_utils_index\` = \`src/utils/index.ts\`

Every edge above is verified by static analysis. Edges the tool couldn't verify are omitted, not guessed.

## Mental model
Read from the exported surface inward: start with \`src/index.ts\`, then follow its first verified handoff into \`src/services/user-service.ts\`.

## Reading order
- \`src/index.ts\` - Detected library entry point; it shows where execution begins for this repo shape.
- \`src/services/user-service.ts\` - Verified spine bridge from \`src/index.ts\` into \`src/utils/index.ts\`, so it explains a central runtime handoff.
- \`src/utils/index.ts\` - Reached directly from \`src/index.ts\`; this is one of the next verified implementation hops.
- \`package.json\` - Defines build, package, or module boundaries that shape how the code is wired.
- \`tsconfig.json\` - Defines build, package, or module boundaries that shape how the code is wired.

## Entry points found
- src/index.ts - Declared as package.json main.

## Subsystems
- No subsystem clusters were strong enough to report yet.

## Gotchas
- Detected package exports or main entry.
- The architecture diagram is intentionally incomplete where static analysis could not verify an edge.
- Subsystem clustering is still sparse, which usually means the repo is small or highly centralized.

## Estimated read time
10 minutes for the spine, 1 hour for fuller coverage.
"
`;
